--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,3 +18,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Symfony\Bundle\MakerBundle\Doctrine\DoctrineHelper: '@maker.doctrine_helper'
+    Symfony\Bundle\MakerBundle\Generator: '@maker.generator'
