--- a/composer.json
+++ b/composer.json
@@ -7,23 +7,23 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.16",
-        "doctrine/doctrine-migrations-bundle": "^3.4",
-        "doctrine/orm": "^3.5",
-        "easycorp/easyadmin-bundle": "^4.26",
+        "beberlei/doctrineextensions": "^1.5",
+        "doctrine/dbal": "^3.10.3",
+        "doctrine/doctrine-bundle": "^2.18",
+        "doctrine/doctrine-migrations-bundle": "^3.5",
+        "doctrine/orm": "^3.5.2",
+        "easycorp/easyadmin-bundle": "^4.26.5",
         "omines/datatables-bundle": "^0.10.3",
-        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpdocumentor/reflection-docblock": "^5.6.3",
         "phpstan/phpdoc-parser": "^2.3",
-        "sensiolabs/typescript-bundle": "^0.2.2",
-        "symfony/apache-pack": "*",
+        "symfony/apache-pack": ">=1.0.1",
         "symfony/asset": "7.3.*",
         "symfony/asset-mapper": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/doctrine-messenger": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/expression-language": "7.3.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.8.2",
         "symfony/form": "7.3.*",
         "symfony/framework-bundle": "7.3.*",
         "symfony/http-client": "7.3.*",
@@ -49,8 +49,8 @@
         "symfony/web-link": "7.3.*",
         "symfony/yaml": "7.3.*",
         "symfonycasts/dynamic-forms": "^0.1.3",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/extra-bundle": "^2.12|^3.21",
+        "twig/twig": "^2.12|^3.21.1"
     },
     "config": {
         "allow-plugins": {
@@ -104,8 +104,8 @@
         }
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.88",
-        "phpunit/phpunit": "^12.3",
+        "friendsofphp/php-cs-fixer": "^3.89.0",
+        "phpunit/phpunit": "^12.4.1",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
         "symfony/debug-bundle": "7.3.*",
