--- a/config/packages/asset_mapper.yaml
+++ b/config/packages/asset_mapper.yaml
@@ -3,10 +3,10 @@ framework:
         # The paths to make available to the asset mapper.
         paths:
             - assets/
+            - assets/js-compiled/
+        excluded_patterns:
+          - "*/assets/ts/*"
         missing_import_mode: strict
-
-sensiolabs_typescript:
-    source_dir: ['%kernel.project_dir%/assets/ts']
 
 when@prod:
     framework:
