--- a/config/packages/serializer.yaml
+++ b/config/packages/serializer.yaml
@@ -1,3 +1,3 @@
 framework:
     serializer:
-        name_converter: 'serializer.name_converter.camel_case_to_snake_case'
+        name_converter: 'App\Serializer\OptionalCamelCaseToSnakeCaseConverter'
