added frankenphp docker

--- a/blueprints/.env
+++ b/blueprints/.env
@@ -13,10 +13,10 @@ APP_SECRET=
 DEFAULT_URI=http://localhost
 ###< symfony/routing ###
 
-MARIADB_ROOT_PASSWORD=root
 MARIADB_DATABASE=scouting_tool
-MARIADB_USER=symfony
-MARIADB_PASSWORD=develop
+MARIADB_USER=
+MARIADB_PASSWORD=
+MARIADB_ROOT_PASSWORD=
 MARIADB_HOST=database
 MARIADB_PORT=3306
 
@@ -34,5 +34,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-SUPERADMIN_EMAIL=admin@example.com
-SUPERADMIN_PASSWORD=SOME_LONG_SECURE_PASSWORD
+SUPERADMIN_EMAIL=
+SUPERADMIN_PASSWORD=
