--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_SECRET=
+APP_SECRET= asdqwe
 ###< symfony/framework-bundle ###
 
 ###> symfony/routing ###
