--- a/.env
+++ b/.env
@@ -1,26 +1,11 @@
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
-###> symfony/framework-bundle ###
-APP_SECRET= asdqwe
-###< symfony/framework-bundle ###
 
 ###> symfony/routing ###
 # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
 # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
-DEFAULT_URI=https://localhost
+
+SERVER_NAME="localhost"
+DEFAULT_URI="https://${SERVER_NAME}"
 ###< symfony/routing ###
-
-MARIADB_ROOT_PASSWORD=root
-MARIADB_DATABASE=scouting_tool
-MARIADB_USER=symfony
-MARIADB_PASSWORD=develop
-MARIADB_HOST=database
-MARIADB_PORT=3306
-
-###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://${MARIADB_USER}:${MARIADB_PASSWORD}@${MARIADB_HOST}:${MARIADB_PORT}/${MARIADB_DATABASE}?charset=utf8mb4"
 
 ###> symfony/messenger ###
 # Choose one of the transports below
@@ -29,9 +14,33 @@ DATABASE_URL="mysql://${MARIADB_USER}:${MARIADB_PASSWORD}@${MARIADB_HOST}:${MARI
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
-###> symfony/mailer ###
-MAILER_DSN=null://null
-###< symfony/mailer ###
+#########################################
+### Add aqual data only in .env.local ###
+#########################################
 
-SUPERADMIN_EMAIL=admin@example.com
-SUPERADMIN_PASSWORD=SOME_LONG_SECURE_PASSWORD
+# symfony
+APP_SECRET=
+
+# database
+MARIADB_ROOT_PASSWORD=
+MARIADB_DATABASE=
+MARIADB_USER=
+MARIADB_PASSWORD=
+MARIADB_HOST=
+MARIADB_PORT=
+
+DATABASE_URL="mysql://${MARIADB_USER}:${MARIADB_PASSWORD}@${MARIADB_HOST}:${MARIADB_PORT}/${MARIADB_DATABASE}?charset=utf8mb4"
+
+# superadmin credentials
+SUPERADMIN_EMAIL=
+SUPERADMIN_PASSWORD=
+
+# symfony/mailer
+ZIH_LOGIN=
+ZIH_PASSWORD=
+ZIH_SENDER=
+MAILER_DSN=
+
+# scouting app credentials
+BALLTIME_TOKEN=""
+
