--- a/compose.yaml
+++ b/compose.yaml
@@ -2,12 +2,9 @@ services:
   database:
     image: 'mariadb:11.8'
     restart: always
-    environment:
-      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
-      MARIADB_DATABASE: ${MARIADB_DATABASE}
-      MARIADB_USER: ${MARIADB_USER}
-      MARIADB_PASSWORD: ${MARIADB_PASSWORD}
-      MARIADB_HOST: ${MARIADB_HOST}
+    env_file:
+      - ./.env.local
+      - ./.env
     healthcheck:
       test: ["CMD-SHELL", "mariadb-admin ping -h localhost -u$MARIADB_USER -p\"$MARIADB_PASSWORD\""]
       timeout: 5s
@@ -25,6 +22,9 @@ services:
   php:
     image: ${IMAGES_PREFIX:-}app-php
     restart: unless-stopped
+    env_file:
+      - ./.env.local
+      - ./.env
     environment:
       SERVER_NAME: ${SERVER_NAME:-localhost}, php:80
       DEFAULT_URI: https://${SERVER_NAME:-localhost}:${HTTPS_PORT:-443}
