prod environment now works locally. Hope on server too

--- a/.env
+++ b/.env
@@ -22,12 +22,12 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 APP_SECRET=
 
 # database
+MARIADB_DATABASE=scouting_tool
+MARIADB_HOST=database
+MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=
-MARIADB_DATABASE=
 MARIADB_USER=
 MARIADB_PASSWORD=
-MARIADB_HOST=
-MARIADB_PORT=
 
 DATABASE_URL="mysql://${MARIADB_USER}:${MARIADB_PASSWORD}@${MARIADB_HOST}:${MARIADB_PORT}/${MARIADB_DATABASE}?charset=utf8mb4"
 
@@ -39,7 +39,7 @@ SUPERADMIN_PASSWORD=
 ZIH_LOGIN=
 ZIH_PASSWORD=
 ZIH_SENDER=
-MAILER_DSN=
+MAILER_DSN="smtp://user%5C${ZIH_LOGIN}:${ZIH_PASSWORD}@msx.tu-dresden.de:587"
 
 # scouting app credentials
 BALLTIME_TOKEN=""
